# Afterlife

./: .gitignore  LICENSE  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt  tailwind.config.js  webpack.development.config.js
src/: manage.py
src/afterlife/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/afterlife/templates/: afterlife_index.html
src/assets/: main.css  main.js  main.scss
src/assets/abstracts/: _mixins.scss
src/assets/base/: _reset.scss
src/assets/js/: bottomNavigation.js  fab.js  navigation-bar.js  top-app-bar.js
src/assets/layouts/: _article.scss  _container.scss  _footer.scss  _grid.scss  _main.scss  _page.scss  base.html
src/blog/: admin.py  models.py  urls.py  views.py
src/blog/templates/: blog_index.html
src/feed/: models.py  views.py
src/notebook/: models.py  urls.py  views.py
src/notebook/templates/: notebook_index.html
src/notes/: models.py  urls.py  views.py
src/posts/: admin.py  models.py  urls.py  views.py
src/stories/: urls.py  views.py
src/templates/: afterlife_index.html  base.html  blog_index.html  home.html  notebook_index.html
src/templates/components/: breadcrumb.html  button.html  card.html  cta.html  cta_card.html  fab.html  feed.html  filter.html  footer.html  header.html  hero.html  last_activities.html  link.html  nav.html  navigation-bar.html  navigation-list.html  navigation-rail.html  search.html  separator.html  sidebar.html  tab-list.html  tags.html  timeline.html  top-app-bar.html
src/templates/layouts/: article.html  base.html
(+108 files in other folders)
