[tool.poetry]
name = "afterlife"
version = "0.1.0"
description = "blog focused on web development and linux"
authors = ["chaosdynamix <chaosdynamix@posteo.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=3.2.9"
psycopg2-binary = ">=2.9.2"
python-dotenv = ">=0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
